--- a/project.json
+++ b/project.json
@@ -13,6 +13,6 @@
   "description": "A look at how the coaches, quarterbacks and star defensive backs compare in Super Bowl XLIX.",
   "url": "http://projects.seattletimes.com/2015/sb-matchups",
   "slug": "sb-matchups-interactive",
-  "tags": ["sports", "football", "super" "bowl", "seahawks", "patriots"],
+  "tags": ["sports", "football", "super", "bowl", "seahawks", "patriots"],
   "production": true
 }
