Oops, also changes social tag URL

--- a/project.json
+++ b/project.json
@@ -11,7 +11,7 @@
   },
   "title": "Super Bowl XLIX matchups",
   "description": "A look at how the coaches, quarterbacks and star defensive backs compare in Super Bowl XLIX.",
-  "url": "http://projects.seattletimes.com/2015/sb-matchups",
+  "url": "http://projects.seattletimes.com/2015/super-bowl-matchups",
   "slug": "sb-matchups-interactive",
   "tags": ["sports", "football", "super", "bowl", "seahawks", "patriots"],
   "production": true
