--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/seattletimes/sb-matchups.git"
   },
   "dependencies": {
+    "6to5ify": "^4.0.0",
     "async": "^0.9.0",
     "aws-sdk": "^2.0.0-rc.19",
     "browserify": "^6.2.0",
